<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".TipsForDonor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

            <TextView
                android:textColor="#EA4444"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                />
            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/detail_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:textColor="#EA4444"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_2"
                style="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                />
            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/detail_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:textColor="#EA4444"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

        </LinearLayout>

    </ScrollView>



</LinearLayout>