<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".Division_Dhaka">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:drawableStart="@drawable/right_pointer_left"
                android:drawableEnd="@drawable/right_pointer_right"
                android:id="@+id/dhaka_district_ID"
                android:text="@string/dhaka_district"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:drawableStart="@drawable/right_pointer_left"
                android:drawableEnd="@drawable/right_pointer_right"
                android:id="@+id/gazipur_district_ID"
                android:text="@string/gazipur_district"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:drawableStart="@drawable/right_pointer_left"
                android:drawableEnd="@drawable/right_pointer_right"
                android:id="@+id/kishoreganj_district_ID"
                android:text="@string/kishoreganj_district"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:drawableStart="@drawable/right_pointer_left"
                android:drawableEnd="@drawable/right_pointer_right"
                android:id="@+id/manikganj_district_ID"
                android:text="@string/manikganj_district"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:drawableStart="@drawable/right_pointer_left"
                android:drawableEnd="@drawable/right_pointer_right"
                android:id="@+id/munshiganj_district_ID"
                android:text="@string/munshiganj_district"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:drawableStart="@drawable/right_pointer_left"
                android:drawableEnd="@drawable/right_pointer_right"
                android:id="@+id/narayanganj_district_ID"
                android:text="@string/narayanganj_district"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:drawableStart="@drawable/right_pointer_left"
                android:drawableEnd="@drawable/right_pointer_right"
                android:id="@+id/narsingdi_district_ID"
                android:text="@string/narsingdi_district"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:drawableStart="@drawable/right_pointer_left"
                android:drawableEnd="@drawable/right_pointer_right"
                android:id="@+id/tangail_district_ID"
                android:text="@string/tangail_district"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:drawableStart="@drawable/right_pointer_left"
                android:drawableEnd="@drawable/right_pointer_right"
                android:id="@+id/faridpur_district_ID"
                android:text="@string/faridpur_district"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:drawableStart="@drawable/right_pointer_left"
                android:drawableEnd="@drawable/right_pointer_right"
                android:id="@+id/gopalganj_district_ID"
                android:text="@string/gopalganj_district"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:drawableStart="@drawable/right_pointer_left"
                android:drawableEnd="@drawable/right_pointer_right"
                android:id="@+id/madaripur_district_ID"
                android:text="@string/madaripur_district"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:drawableStart="@drawable/right_pointer_left"
                android:drawableEnd="@drawable/right_pointer_right"
                android:id="@+id/rajbari_district_ID"
                android:text="@string/rajbari_district"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:drawableStart="@drawable/right_pointer_left"
                android:drawableEnd="@drawable/right_pointer_right"
                android:id="@+id/shariatpur_district_ID"
                android:text="@string/shariatpur_district"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </ScrollView>




</LinearLayout>